--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "73a07cbf-8dc3-47ec-87ba-9040d0a2e60b",
    "metadata": {
     "execution": {
@@ -145,7 +145,11 @@
    },
    "outputs": [],
    "source": [
-    "subtable=Table(rows=[  ( record.obs_id, record.seq_num, nimage ) for [id,record,nimage, guider] in exposureList ], names=(  'id', 'seqnum', 'nimage'  ) )"
+    "try:\n",
+    "    subtable=Table(rows=[  ( record.obs_id, record.seq_num, nimage ) for [id,record,nimage, guider] in exposureList ], names=(  'id', 'seqnum', 'nimage'  ) )\n",
+    "except:\n",
+    "    traceback.print_exc()\n",
+    "    subtable=None   "
    ]
   },
   {
