--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "22ea6162-9d49-4a37-8e17-3ee300fb2248",
    "metadata": {
     "execution": {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8adabb98-022e-4749-b92d-02644a5fb4f3",
    "metadata": {
     "execution": {
@@ -39,13 +39,13 @@
     "from lsst.daf.butler import Butler\n",
     "from astropy.table import Table\n",
     "from astropy.time import Time, TimeDelta\n",
-    "import tabulate\n",
-    "import numpy"
+    "import tabulate20251026\n",
+    "import traceback"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "51cabde2-cf08-49e3-94f1-c0da529c23b0",
    "metadata": {
     "execution": {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "509dbd52-5608-48bb-a07a-46671e47b83f",
    "metadata": {
     "execution": {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "8d2f2260-f45e-4e01-af4a-c1f1a9183577",
    "metadata": {
     "execution": {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "73a07cbf-8dc3-47ec-87ba-9040d0a2e60b",
    "metadata": {
     "execution": {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "8e69fb9b-6d5b-4201-8549-7e9bbefd24cc",
    "metadata": {
     "execution": {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "edff0af2-b008-4d11-af46-51f834d7c27f",
    "metadata": {
     "execution": {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "7622b094-57d1-4050-96ff-1390308b9175",
    "metadata": {
     "execution": {
@@ -242,25 +242,6 @@
      "text": [
       "The number of exposures is 0\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead>\n",
-       "<tr></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "</tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "'<table>\\n<thead>\\n<tr></tr>\\n</thead>\\n<tbody>\\n</tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
