--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "8adabb98-022e-4749-b92d-02644a5fb4f3",
    "metadata": {
     "execution": {
@@ -39,7 +39,7 @@
     "from lsst.daf.butler import Butler\n",
     "from astropy.table import Table\n",
     "from astropy.time import Time, TimeDelta\n",
-    "import tabulate20251026\n",
+    "import tabulate\n",
     "import traceback"
    ]
   },
