--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "8e69fb9b-6d5b-4201-8549-7e9bbefd24cc",
    "metadata": {
     "execution": {
@@ -175,8 +175,9 @@
    },
    "outputs": [],
    "source": [
-    "for a, b in zip(subtable[:-1][numpy.diff(subtable['seqnum'])!=1], subtable[1:][numpy.diff(subtable['seqnum'])!=1]):\n",
-    "    print(a['id'], b['id'])"
+    "if subtable is not None:\n",
+    "    for a, b in zip(subtable[:-1][numpy.diff(subtable['seqnum'])!=1], subtable[1:][numpy.diff(subtable['seqnum'])!=1]):\n",
+    "        print(a['id'], b['id'])"
    ]
   },
   {
