--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "edff0af2-b008-4d11-af46-51f834d7c27f",
    "metadata": {
     "execution": {
@@ -211,8 +211,9 @@
    },
    "outputs": [],
    "source": [
-    "for a, b in zip(subtable[:-1][numpy.diff(subtable['nimage'])!=0], subtable[1:][numpy.diff(subtable['nimage'])!=0]):\n",
-    "    print(a['id'], a['nimage'], b['id'], b['nimage'])"
+    "if subtable is not None:\n",
+    "    for a, b in zip(subtable[:-1][numpy.diff(subtable['nimage'])!=0], subtable[1:][numpy.diff(subtable['nimage'])!=0]):\n",
+    "        print(a['id'], a['nimage'], b['id'], b['nimage'])"
    ]
   },
   {
