--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8adabb98-022e-4749-b92d-02644a5fb4f3",
    "metadata": {
     "execution": {
@@ -40,7 +40,8 @@
     "from astropy.table import Table\n",
     "from astropy.time import Time, TimeDelta\n",
     "import tabulate\n",
-    "import traceback"
+    "import traceback\n",
+    "import numpy"
    ]
   },
   {
