--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "22ea6162-9d49-4a37-8e17-3ee300fb2248",
    "metadata": {
     "execution": {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8adabb98-022e-4749-b92d-02644a5fb4f3",
    "metadata": {
     "execution": {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "51cabde2-cf08-49e3-94f1-c0da529c23b0",
    "metadata": {
     "execution": {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "509dbd52-5608-48bb-a07a-46671e47b83f",
    "metadata": {
     "execution": {
@@ -77,7 +77,15 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:botocore.credentials:Found credentials in shared credentials file: /sdf/home/y/youtsumi/.lsst/aws-credentials.ini\n"
+     ]
+    }
+   ],
    "source": [
     "butler = Butler('embargo_new', collections=[\n",
     "    'LSSTCam/raw/all',\n",
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "8d2f2260-f45e-4e01-af4a-c1f1a9183577",
    "metadata": {
     "execution": {
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "73a07cbf-8dc3-47ec-87ba-9040d0a2e60b",
    "metadata": {
     "execution": {
@@ -163,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8e69fb9b-6d5b-4201-8549-7e9bbefd24cc",
    "metadata": {
     "execution": {
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "edff0af2-b008-4d11-af46-51f834d7c27f",
    "metadata": {
     "execution": {
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "7622b094-57d1-4050-96ff-1390308b9175",
    "metadata": {
     "execution": {
