--- a/operations/FES/CarouselError_sticky.ipynb
+++ b/operations/FES/CarouselError_sticky.ipynb
@@ -6,11 +6,11 @@
    "id": "51bb739a-5f87-40b2-bd3c-8ee6752bbd30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:25:53.376449Z",
-     "iopub.status.busy": "2025-11-20T00:25:53.376327Z",
-     "iopub.status.idle": "2025-11-20T00:25:53.378393Z",
-     "shell.execute_reply": "2025-11-20T00:25:53.378047Z",
-     "shell.execute_reply.started": "2025-11-20T00:25:53.376436Z"
+     "iopub.execute_input": "2025-11-20T00:38:30.235272Z",
+     "iopub.status.busy": "2025-11-20T00:38:30.235011Z",
+     "iopub.status.idle": "2025-11-20T00:38:30.238499Z",
+     "shell.execute_reply": "2025-11-20T00:38:30.237834Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:30.235253Z"
     }
    },
    "outputs": [],
@@ -26,11 +26,11 @@
    "id": "20fc42a9-1593-48da-9ec2-35fa93f40c63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:25:55.551562Z",
-     "iopub.status.busy": "2025-11-20T00:25:55.551208Z",
-     "iopub.status.idle": "2025-11-20T00:25:56.339084Z",
-     "shell.execute_reply": "2025-11-20T00:25:56.338510Z",
-     "shell.execute_reply.started": "2025-11-20T00:25:55.551534Z"
+     "iopub.execute_input": "2025-11-20T00:38:30.821198Z",
+     "iopub.status.busy": "2025-11-20T00:38:30.820957Z",
+     "iopub.status.idle": "2025-11-20T00:38:30.824253Z",
+     "shell.execute_reply": "2025-11-20T00:38:30.823825Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:30.821180Z"
     }
    },
    "outputs": [],
@@ -46,15 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "74aea502-8fe2-4127-8356-ebfbea4d20b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:26:18.068505Z",
-     "iopub.status.busy": "2025-11-20T00:26:18.068106Z",
-     "iopub.status.idle": "2025-11-20T00:26:18.509296Z",
-     "shell.execute_reply": "2025-11-20T00:26:18.508732Z",
-     "shell.execute_reply.started": "2025-11-20T00:26:18.068489Z"
+     "iopub.execute_input": "2025-11-20T00:38:31.685868Z",
+     "iopub.status.busy": "2025-11-20T00:38:31.685529Z",
+     "iopub.status.idle": "2025-11-20T00:38:32.170916Z",
+     "shell.execute_reply": "2025-11-20T00:38:32.170496Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:31.685841Z"
     }
    },
    "outputs": [
@@ -63,7 +63,7 @@
      "output_type": "stream",
      "text": [
       "Looking for carousel controler error(s) \n",
-      " between the  2025-11-19T00:26:18.070050+00:00  and the  2025-11-20T00:26:18.070050+00:00\n"
+      " between the  2025-11-19T00:38:31.687462+00:00  and the  2025-11-20T00:38:31.687462+00:00\n"
      ]
     }
    ],
@@ -97,11 +97,11 @@
    "id": "d855007f-798a-4a90-b9ea-c398a6cbbfe3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:26:21.401947Z",
-     "iopub.status.busy": "2025-11-20T00:26:21.401615Z",
-     "iopub.status.idle": "2025-11-20T00:26:21.405855Z",
-     "shell.execute_reply": "2025-11-20T00:26:21.405387Z",
-     "shell.execute_reply.started": "2025-11-20T00:26:21.401921Z"
+     "iopub.execute_input": "2025-11-20T00:38:33.074011Z",
+     "iopub.status.busy": "2025-11-20T00:38:33.073757Z",
+     "iopub.status.idle": "2025-11-20T00:38:33.077426Z",
+     "shell.execute_reply": "2025-11-20T00:38:33.077049Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:33.073997Z"
     }
    },
    "outputs": [],
@@ -126,15 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "1c8a9f8f-8b21-4246-9fa6-738719a81ff2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:26:22.695228Z",
-     "iopub.status.busy": "2025-11-20T00:26:22.694884Z",
-     "iopub.status.idle": "2025-11-20T00:26:22.699054Z",
-     "shell.execute_reply": "2025-11-20T00:26:22.698616Z",
-     "shell.execute_reply.started": "2025-11-20T00:26:22.695212Z"
+     "iopub.execute_input": "2025-11-20T00:38:33.985211Z",
+     "iopub.status.busy": "2025-11-20T00:38:33.984947Z",
+     "iopub.status.idle": "2025-11-20T00:38:33.989277Z",
+     "shell.execute_reply": "2025-11-20T00:38:33.988901Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:33.985195Z"
     }
    },
    "outputs": [],
@@ -163,34 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "7f68339f-3e3c-4b18-8140-a77274a7ee64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:26:24.503388Z",
-     "iopub.status.busy": "2025-11-20T00:26:24.503175Z",
-     "iopub.status.idle": "2025-11-20T00:26:25.228907Z",
-     "shell.execute_reply": "2025-11-20T00:26:25.228366Z",
-     "shell.execute_reply.started": "2025-11-20T00:26:24.503373Z"
+     "iopub.execute_input": "2025-11-20T00:38:35.038929Z",
+     "iopub.status.busy": "2025-11-20T00:38:35.038621Z",
+     "iopub.status.idle": "2025-11-20T00:38:36.202222Z",
+     "shell.execute_reply": "2025-11-20T00:38:36.201772Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:35.038913Z"
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running the query \n",
-      "SELECT * FROM \"lsst.MTCamera\".\"autogen\".\"lsst.MTCamera.fcs_canbus_controller\" WHERE  time > '2025-11-19T00:26:18.070050+00:00' AND time < '2025-11-20T00:26:18.070050+00:00'  AND \"Controller\"='carouselController' AND \"Canbus\"='canbus0' AND \"Agent\"='fcs' \n",
-      "Query completed                                                               \n",
-      "\n",
-      "Running the query \n",
-      "SELECT * FROM \"lsst.MTCamera\".\"autogen\".\"lsst.MTCamera.fcs_carousel\" WHERE  time > '2025-11-19T00:26:18.070050+00:00' AND time < '2025-11-20T00:26:18.070050+00:00'  AND  \"Hardware\"='carousel' AND \"Agent\"='fcs' \n",
-      "Query completed                                                               \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#query the data base to produce a panda object will all needed data \n",
     "#query = '''SELECT * FROM \"lsst.MTCamera\".\"autogen\".\"lsst.MTCamera.fcs_canbus_controller\" WHERE  time > '%s' AND time < '%s'  AND \"Controller\"='accelerobf' AND \"Canbus\"='canbus0' AND \"Agent\"='fcs' ''' % (tstart,tend)\n",
@@ -228,11 +213,11 @@
    "id": "68b7484c-1ae3-4d9b-807c-368c0239610c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:26:39.368757Z",
-     "iopub.status.busy": "2025-11-20T00:26:39.368547Z",
-     "iopub.status.idle": "2025-11-20T00:26:39.418347Z",
-     "shell.execute_reply": "2025-11-20T00:26:39.417808Z",
-     "shell.execute_reply.started": "2025-11-20T00:26:39.368742Z"
+     "iopub.execute_input": "2025-11-20T00:38:36.233164Z",
+     "iopub.status.busy": "2025-11-20T00:38:36.233016Z",
+     "iopub.status.idle": "2025-11-20T00:38:36.286361Z",
+     "shell.execute_reply": "2025-11-20T00:38:36.285951Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:36.233151Z"
     }
    },
    "outputs": [],
@@ -295,14 +280,22 @@
    "id": "cf760454-a467-4a89-8496-d24685c12eca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T00:26:41.868202Z",
-     "iopub.status.busy": "2025-11-20T00:26:41.867918Z",
-     "iopub.status.idle": "2025-11-20T00:26:41.874142Z",
-     "shell.execute_reply": "2025-11-20T00:26:41.873694Z",
-     "shell.execute_reply.started": "2025-11-20T00:26:41.868187Z"
+     "iopub.execute_input": "2025-11-20T00:38:37.284980Z",
+     "iopub.status.busy": "2025-11-20T00:38:37.284680Z",
+     "iopub.status.idle": "2025-11-20T00:38:37.291135Z",
+     "shell.execute_reply": "2025-11-20T00:38:37.290741Z",
+     "shell.execute_reply.started": "2025-11-20T00:38:37.284956Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No carousel controler error in the requested period.\n"
+     ]
+    }
+   ],
    "source": [
     "#plot from the start of the rotation to 2.5 s after the error the carousel rotation data\n",
     "nb_error=len(index_fault_start)\n",
@@ -337,6 +330,14 @@
     "        filename='StikyCarousel_%s' %(index_error_start[i].strftime('%Y-%m-%d-%X')) \n",
     "        SaveFig(fig,File=filename,run_cur='FES_ERROR',raft_cur='Carousel')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8a30753-f7e7-42fe-8b5f-b2275a9dd299",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
