fix display and time conversion in seconds

--- a/operations/FES/CarouselMonitor_unlock.ipynb
+++ b/operations/FES/CarouselMonitor_unlock.ipynb
@@ -152,7 +152,7 @@
     "index_brakeOn_i=np.argwhere( (brake[0:-1]!='SWITCH_ON_DISABLED') & (brake[1:]=='SWITCH_ON_DISABLED' ))[:,0]\n",
     "end_controler=unclamp_car.iloc[index_brakeOn_i].index\n",
     "delta=end_controler-start_controler\n",
-    "deltas=np.array(delta.seconds)\n",
+    "deltas=np.array(delta.total_seconds())\n",
     "good_dur=np.argwhere((deltas!=0) & (deltas<6))[:,0]\n",
     "\n",
     "start_unclamp=unclamp_car.iloc[index_brakeOff_i[good_dur]].index\n",
@@ -397,9 +397,9 @@
     "if PlotDiagnostic :\n",
     "    if up_hist > 0. : \n",
     "        plt.plot([2.1,2.1],[0.,up_hist],color='orange')\n",
-    "        plt.text(2.1,up_hist*0.95,'Max Ok\\n time',color='orange',fontsize=fontsize)    \n",
+    "        plt.text(2.1,up_hist*0.95,' Max Ok\\n time',color='orange',fontsize=fontsize)    \n",
     "        plt.plot([3,3],[0.,np.max(ba)],color='red')\n",
-    "        plt.text(3,up_hist*0.95,'Need to increase current or\\n to do maintenance',color='red',fontsize=fontsize)\n",
+    "        plt.text(3,up_hist*0.95,' Need to increase current\\n or to do maintenance',color='red',fontsize=fontsize)\n",
     "plt.xlabel('Unlock Clamp Duration in s',fontsize=fontsize) \n",
     "plt.xticks(fontsize=fontsize)\n",
     "plt.yticks(fontsize=fontsize)\n",
