--- a/operations/FES/SetFilterMonitor_time.ipynb
+++ b/operations/FES/SetFilterMonitor_time.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# configuration parameters for Times square\n",
     "last_data_date = 'Now'\n",
-    "duration_in_day = 20\n",
+    "duration_in_day = 1\n",
     "OverViewOnly = True\n",
     "max_time    =  100\n",
     "fontsize    =  18"
@@ -340,7 +340,7 @@
     "all_value_nb=len(all_value[np.where((all_value>70) & (all_value<max_time))])\n",
     "labelx='SetFilter Duration in s ; mean[70s,%ds] = %4.1f s for %d entries ' % (max_time,all_value_mean,all_value_nb)\n",
     "if all_value_max_time > 0  : \n",
-    "    labelx+=' ( %d SET_FILTER TOOK MORE THAN %ds ! ) ' % (all_value_150,max_time)\n",
+    "    labelx+=' ( %d SET_FILTER TOOK MORE THAN %ds ! ) ' % (all_value_max_time,max_time)\n",
     "plt.xlabel(labelx,fontsize=fontsize) \n",
     "plt.legend()\n",
     "plt.xticks(fontsize=fontsize)\n",
