renounce to  measure if the dome is open for generic plot

--- a/operations/FES/SetFilterMonitor_time.ipynb
+++ b/operations/FES/SetFilterMonitor_time.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# configuration parameters for Times square\n",
-    "last_data_date = 'Now'\n",
+    "last_data_date = 'now'\n",
     "duration_in_day = 1\n",
     "OverViewOnly = True\n",
     "max_time    =  100\n",
@@ -204,7 +204,7 @@
     "    cur_in_on.append(controler.loc[start_controler[i]:end_controler[i]]['averageCurrent'].to_numpy().mean())\n",
     "cur_in_on=np.array(cur_in_on)\n",
     "# all setfilter on sky \n",
-    "full_set=duration_all[(duration_all['UNLOCK'].notnull()) & (duration_all['Clamp']=='Xplus' ) & (duration_all['profileVelocity']>3000) & (duration_all['SET_FILTER'].notnull()) & (duration_all['mainDoorOpeningPercentage']>50 )]\n",
+    "full_set=duration_all[(duration_all['UNLOCK'].notnull()) & (duration_all['Clamp']=='Xplus' ) & (duration_all['profileVelocity']>3000) & (duration_all['SET_FILTER'].notnull()) ]\n",
     "# index with recovery due break unstick preventive operation \n",
     "break_warm_index=[]\n",
     "for i in range(len(break_warm)) : \n",
@@ -291,11 +291,11 @@
     "all_value_nb=len(for_mean)\n",
     "all_value_max=np.sum(for_mean>max_time)\n",
     "\n",
-    "title='SetFilter  duration dome open  \\n for a period from %s to %s \\n  mean = %4.1f s for %d entries ' % (tstart,tend,all_value_mean,all_value_nb)\n",
+    "title='SetFilter  duration  \\n for a period from %s to %s \\n  mean = %4.1f s for %d entries ' % (tstart,tend,all_value_mean,all_value_nb)\n",
     "fig.suptitle(title,fontsize=fontsize)\n",
     "\n",
     "a=plt.hist(to_plot,80,range=(75,max_time),stacked=True,hatch=hatch,color=color,label=label)\n",
-    "labelx='SetFilter Duration Dome Open in s  ' \n",
+    "labelx='SetFilter Duration in s  ' \n",
     "if all_value_max > 0  : \n",
     "    labelx+=' ( %d SET_FILTER TOOK MORE THAN %ds ! ) ' % (all_value_max,max_time)\n",
     "plt.xlabel(labelx,fontsize=fontsize) \n",
@@ -359,26 +359,29 @@
     "for isock in range(1,6) : \n",
     "    for car_clamp in ['Xminus'] :\n",
     "       val=duration_all[(duration_all['UNLOCK'].notnull()) & (duration_all['Socket']==socket_name[isock-1] )& (duration_all['Clamp']==car_clamp ) & (duration_all['profileVelocity']>3000 ) & (duration_all['SET_FILTER'].notnull())& (duration_all['mainDoorOpeningPercentage']>50 ) ]['SET_FILTER'].to_numpy()/1000.\n",
+    "       if len(val)==0 : \n",
+    "           continue\n",
     "       val_mean=val[np.where((val>70) & (val<max_time))].mean()\n",
     "       a.append(val)\n",
     "       all_value=np.append(all_value,val) \n",
     "       val_nb=len(val[np.where((val>70) & (val<max_time))])\n",
     "       label.append('%s mean = %4.1f for %d entries' % (socket_name[isock-1],val_mean,val_nb))\n",
-    "plt.hist(a,100,range=(70,max_time),stacked=True,color=color[car_clamp],label=label)\n",
-    "all_value_mean=all_value[np.where((all_value>70) & (all_value<max_time))].mean()\n",
-    "all_value_150=len(all_value[np.where(all_value>max_time)])\n",
-    "all_value_nb=len(all_value[np.where((all_value>70) & (all_value<max_time))])\n",
-    "labelx='SetFilter Duration Dome Open in s ; mean[70s,%ds] = %4.1f s for %d entries ' % (max_time,all_value_mean,all_value_nb)\n",
-    "if all_value_150 > 0  : \n",
-    "    labelx+=' ( %d SET_FILTER TOOK MORE THAN %ds ! ) ' % (all_value_150,max_time)\n",
-    "plt.xlabel(labelx,fontsize=fontsize) \n",
-    "plt.xticks(fontsize=fontsize)\n",
-    "plt.yticks(fontsize=fontsize)\n",
-    "plt.legend(fontsize=fontsize)\n",
-    "\n",
-    "plt.legend()\n",
-    "if show_it : plt.show()\n",
-    "if save_fig : SaveFig(fig,File='SetFilterDurationHist',run_cur=run_cur,raft_cur='ClampOnCarousel')\n",
+    "if len(a) > 0 : \n",
+    "    plt.hist(a,100,range=(70,max_time),stacked=True,color=color[car_clamp],label=label)\n",
+    "    all_value_mean=all_value[np.where((all_value>70) & (all_value<max_time))].mean()\n",
+    "    all_value_150=len(all_value[np.where(all_value>max_time)])\n",
+    "    all_value_nb=len(all_value[np.where((all_value>70) & (all_value<max_time))])\n",
+    "    labelx='SetFilter Duration Dome Open in s ; mean[70s,%ds] = %4.1f s for %d entries ' % (max_time,all_value_mean,all_value_nb)\n",
+    "    if all_value_150 > 0  : \n",
+    "        labelx+=' ( %d SET_FILTER TOOK MORE THAN %ds ! ) ' % (all_value_150,max_time)\n",
+    "    plt.xlabel(labelx,fontsize=fontsize) \n",
+    "    plt.xticks(fontsize=fontsize)\n",
+    "    plt.yticks(fontsize=fontsize)\n",
+    "    plt.legend(fontsize=fontsize)\n",
+    "    \n",
+    "    plt.legend()\n",
+    "    if show_it : plt.show()\n",
+    "    if save_fig : SaveFig(fig,File='SetFilterDurationHist',run_cur=run_cur,raft_cur='ClampOnCarousel')\n",
     "#\n",
     "fig=plt.figure(figsize=(20,12))\n",
     "title='SetFilter  duration \\n for a period from %s to %s ' % (tstart,tend)\n",
@@ -423,6 +426,16 @@
     "if save_fig : SaveFig(fig,File='SetFilterCount',run_cur=run_cur,raft_cur='ClampOnCarousel')\n",
     "#\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33237bfa-7e10-4773-b492-0c6eaae06df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val"
    ]
   },
   {
