--- a/operations/FES/Monitor_motors.ipynb
+++ b/operations/FES/Monitor_motors.ipynb
@@ -179,9 +179,11 @@
     "            cont=controler_motor[(controler_motor['Controller']==controle) ]\n",
     "        #=== build related time information  \n",
     "        brake=cont['state'].to_numpy()\n",
+    "        if len(brake)==0 : continue\n",
     "        index_brakeOff_i=np.argwhere( (brake[0:-1]=='SWITCH_ON_DISABLED') & (brake[1:]!='SWITCH_ON_DISABLED' ))[:,0]\n",
+    "        if len(index_brakeOff_i) == 0 : continue\n",
     "        start_controler=cont.iloc[index_brakeOff_i].index\n",
-    "        index_brakeOn_i=np.argwhere( (brake[0:-1]!='SWITCH_ON_DISABLED') & (brake[1:]=='SWITCH_ON_DISABLED' ))[:,0]\n",
+    "        index_brakeOn_i=np.argwhere( (brake[index_brakeOff_i[0]:-1]!='SWITCH_ON_DISABLED') & (brake[index_brakeOff_i[0]+1:]=='SWITCH_ON_DISABLED' ))[:,0]+index_brakeOff_i[0]\n",
     "        end_controler=cont.iloc[index_brakeOn_i].index\n",
     "        delta=end_controler-start_controler\n",
     "        deltas=np.array(delta.seconds)\n",
