fix the date of the end of each sequence

--- a/operations/FES/Monitor_motors.ipynb
+++ b/operations/FES/Monitor_motors.ipynb
@@ -183,7 +183,7 @@
     "        index_brakeOff_i=np.argwhere( (brake[0:-1]=='SWITCH_ON_DISABLED') & (brake[1:]!='SWITCH_ON_DISABLED' ))[:,0]\n",
     "        if len(index_brakeOff_i) == 0 : continue\n",
     "        start_controler=cont.iloc[index_brakeOff_i].index\n",
-    "        index_brakeOn_i=np.argwhere( (brake[index_brakeOff_i[0]:-1]!='SWITCH_ON_DISABLED') & (brake[index_brakeOff_i[0]+1:]=='SWITCH_ON_DISABLED' ))[:,0]+index_brakeOff_i[0]\n",
+    "        index_brakeOn_i=np.argwhere( (brake[index_brakeOff_i[0]:-1]!='SWITCH_ON_DISABLED') & (brake[index_brakeOff_i[0]+1:]=='SWITCH_ON_DISABLED' ))[:,0]+index_brakeOff_i[0]+1\n",
     "        end_controler=cont.iloc[index_brakeOn_i].index\n",
     "        delta=end_controler-start_controler\n",
     "        deltas=np.array(delta.seconds)\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63dd828-c28c-4441-961a-21d3435b374e",
+   "id": "ed23170e-330c-4713-9cdb-92d565adb4d2",
    "metadata": {},
    "outputs": [],
    "source": []
