fix the default value to now

--- a/operations/FES/Monitor_motors.ipynb
+++ b/operations/FES/Monitor_motors.ipynb
@@ -2,14 +2,398 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "51bb739a-5f87-40b2-bd3c-8ee6752bbd30",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T10:38:02.916575Z",
+     "iopub.status.busy": "2026-01-22T10:38:02.916359Z",
+     "iopub.status.idle": "2026-01-22T10:38:02.919112Z",
+     "shell.execute_reply": "2026-01-22T10:38:02.918671Z",
+     "shell.execute_reply.started": "2026-01-22T10:38:02.916560Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# configuration parameters for Times square\n",
-    "last_data_date = 'Now'\n",
+    "import datetime \n",
+    "last_data_date =datetime.date.fromisoformat(datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d'))\n",
     "duration_in_day = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c6b2551e-91ad-4be1-9b86-097de9cd182a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T10:50:40.513851Z",
+     "iopub.status.busy": "2026-01-22T10:50:40.513529Z",
+     "iopub.status.idle": "2026-01-22T10:50:40.516314Z",
+     "shell.execute_reply": "2026-01-22T10:50:40.515882Z",
+     "shell.execute_reply.started": "2026-01-22T10:50:40.513835Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "date=datetime.date.fromisoformat(datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "141e1a14-dff1-4be7-a9ce-38682e2af1fa",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T12:34:29.329733Z",
+     "iopub.status.busy": "2026-01-22T12:34:29.329523Z",
+     "iopub.status.idle": "2026-01-22T12:34:29.332162Z",
+     "shell.execute_reply": "2026-01-22T12:34:29.331773Z",
+     "shell.execute_reply.started": "2026-01-22T12:34:29.329718Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "day_now=datetime.datetime.now(datetime.UTC).strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "11d344f1-21b3-4847-b2ce-89f052c36956",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T12:34:36.532381Z",
+     "iopub.status.busy": "2026-01-22T12:34:36.532172Z",
+     "iopub.status.idle": "2026-01-22T12:34:36.535345Z",
+     "shell.execute_reply": "2026-01-22T12:34:36.534917Z",
+     "shell.execute_reply.started": "2026-01-22T12:34:36.532366Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2026-01-22'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0668c014-87b3-4593-a9cc-66d5a881f804",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T12:34:45.725704Z",
+     "iopub.status.busy": "2026-01-22T12:34:45.725495Z",
+     "iopub.status.idle": "2026-01-22T12:34:45.728792Z",
+     "shell.execute_reply": "2026-01-22T12:34:45.728373Z",
+     "shell.execute_reply.started": "2026-01-22T12:34:45.725689Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2026, 1, 22)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.date.fromisoformat(day_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "de4f9ba6-a914-431b-b6b0-b2e2829fd664",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T12:35:19.599999Z",
+     "iopub.status.busy": "2026-01-22T12:35:19.599793Z",
+     "iopub.status.idle": "2026-01-22T12:35:19.603149Z",
+     "shell.execute_reply": "2026-01-22T12:35:19.602751Z",
+     "shell.execute_reply.started": "2026-01-22T12:35:19.599985Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2026, 1, 22)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "673d20de-d79e-42ac-8418-6e19a218461a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T10:47:28.989283Z",
+     "iopub.status.busy": "2026-01-22T10:47:28.989003Z",
+     "iopub.status.idle": "2026-01-22T10:47:28.995680Z",
+     "shell.execute_reply": "2026-01-22T10:47:28.995251Z",
+     "shell.execute_reply.started": "2026-01-22T10:47:28.989261Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on datetime object:\n",
+      "\n",
+      "class datetime(date)\n",
+      " |  datetime(year, month, day[, hour[, minute[, second[, microsecond[,tzinfo]]]]])\n",
+      " |\n",
+      " |  The year, month and day arguments are required. tzinfo may be None, or an\n",
+      " |  instance of a tzinfo subclass. The remaining arguments may be ints.\n",
+      " |\n",
+      " |  Method resolution order:\n",
+      " |      datetime\n",
+      " |      date\n",
+      " |      builtins.object\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |\n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |\n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |\n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |\n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |\n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |\n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |\n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |\n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |\n",
+      " |  __radd__(self, value, /)\n",
+      " |      Return value+self.\n",
+      " |\n",
+      " |  __reduce__(...)\n",
+      " |      __reduce__() -> (cls, state)\n",
+      " |\n",
+      " |  __reduce_ex__(...)\n",
+      " |      __reduce_ex__(proto) -> (cls, state)\n",
+      " |\n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |\n",
+      " |  __rsub__(self, value, /)\n",
+      " |      Return value-self.\n",
+      " |\n",
+      " |  __str__(self, /)\n",
+      " |      Return str(self).\n",
+      " |\n",
+      " |  __sub__(self, value, /)\n",
+      " |      Return self-value.\n",
+      " |\n",
+      " |  astimezone(...)\n",
+      " |      tz -> convert to local time in new timezone tz\n",
+      " |\n",
+      " |  ctime(...)\n",
+      " |      Return ctime() style string.\n",
+      " |\n",
+      " |  date(...)\n",
+      " |      Return date object with same year, month and day.\n",
+      " |\n",
+      " |  dst(...)\n",
+      " |      Return self.tzinfo.dst(self).\n",
+      " |\n",
+      " |  isoformat(...)\n",
+      " |      [sep] -> string in ISO 8601 format, YYYY-MM-DDT[HH[:MM[:SS[.mmm[uuu]]]]][+HH:MM].\n",
+      " |      sep is used to separate the year from the time, and defaults to 'T'.\n",
+      " |      The optional argument timespec specifies the number of additional terms\n",
+      " |      of the time to include. Valid options are 'auto', 'hours', 'minutes',\n",
+      " |      'seconds', 'milliseconds' and 'microseconds'.\n",
+      " |\n",
+      " |  replace(...)\n",
+      " |      Return datetime with new specified fields.\n",
+      " |\n",
+      " |  time(...)\n",
+      " |      Return time object with same time but with tzinfo=None.\n",
+      " |\n",
+      " |  timestamp(...)\n",
+      " |      Return POSIX timestamp as float.\n",
+      " |\n",
+      " |  timetuple(...)\n",
+      " |      Return time tuple, compatible with time.localtime().\n",
+      " |\n",
+      " |  timetz(...)\n",
+      " |      Return time object with same time and tzinfo.\n",
+      " |\n",
+      " |  tzname(...)\n",
+      " |      Return self.tzinfo.tzname(self).\n",
+      " |\n",
+      " |  utcoffset(...)\n",
+      " |      Return self.tzinfo.utcoffset(self).\n",
+      " |\n",
+      " |  utctimetuple(...)\n",
+      " |      Return UTC time tuple, compatible with time.localtime().\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
+      " |\n",
+      " |  combine(...)\n",
+      " |      date, time -> datetime with same date and time fields\n",
+      " |\n",
+      " |  fromisoformat(...)\n",
+      " |      string -> datetime from a string in most ISO 8601 formats\n",
+      " |\n",
+      " |  fromtimestamp(...)\n",
+      " |      timestamp[, tz] -> tz's local time from POSIX timestamp.\n",
+      " |\n",
+      " |  now(tz=None)\n",
+      " |      Returns new datetime object representing current time local to tz.\n",
+      " |\n",
+      " |        tz\n",
+      " |          Timezone object.\n",
+      " |\n",
+      " |      If no tz is specified, uses local timezone.\n",
+      " |\n",
+      " |  strptime(...)\n",
+      " |      string, format -> new datetime parsed from a string (like time.strptime()).\n",
+      " |\n",
+      " |  utcfromtimestamp(...)\n",
+      " |      Construct a naive UTC datetime from a POSIX timestamp.\n",
+      " |\n",
+      " |  utcnow(...)\n",
+      " |      Return a new datetime representing UTC day and time.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |\n",
+      " |  __new__(*args, **kwargs)\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |\n",
+      " |  fold\n",
+      " |\n",
+      " |  hour\n",
+      " |\n",
+      " |  microsecond\n",
+      " |\n",
+      " |  minute\n",
+      " |\n",
+      " |  second\n",
+      " |\n",
+      " |  tzinfo\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |\n",
+      " |  max = datetime.datetime(9999, 12, 31, 23, 59, 59, 999999)\n",
+      " |\n",
+      " |  min = datetime.datetime(1, 1, 1, 0, 0)\n",
+      " |\n",
+      " |  resolution = datetime.timedelta(microseconds=1)\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from date:\n",
+      " |\n",
+      " |  __format__(...)\n",
+      " |      Formats self with strftime.\n",
+      " |\n",
+      " |  isocalendar(...)\n",
+      " |      Return a named tuple containing ISO year, week number, and weekday.\n",
+      " |\n",
+      " |  isoweekday(...)\n",
+      " |      Return the day of the week represented by the date.\n",
+      " |      Monday == 1 ... Sunday == 7\n",
+      " |\n",
+      " |  strftime(...)\n",
+      " |      format -> strftime() style string.\n",
+      " |\n",
+      " |  toordinal(...)\n",
+      " |      Return proleptic Gregorian ordinal.  January 1 of year 1 is day 1.\n",
+      " |\n",
+      " |  weekday(...)\n",
+      " |      Return the day of the week represented by the date.\n",
+      " |      Monday == 0 ... Sunday == 6\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods inherited from date:\n",
+      " |\n",
+      " |  fromisocalendar(...)\n",
+      " |      int, int, int -> Construct a date from the ISO year, week number and weekday.\n",
+      " |\n",
+      " |      This is the inverse of the date.isocalendar() function\n",
+      " |\n",
+      " |  fromordinal(...)\n",
+      " |      int -> date corresponding to a proleptic Gregorian ordinal.\n",
+      " |\n",
+      " |  today(...)\n",
+      " |      Current date or datetime:  same as self.__class__.fromtimestamp(time.time()).\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from date:\n",
+      " |\n",
+      " |  day\n",
+      " |\n",
+      " |  month\n",
+      " |\n",
+      " |  year\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9fb22547-a6ae-40ab-9c75-47f5576d5e98",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-22T10:39:22.056016Z",
+     "iopub.status.busy": "2026-01-22T10:39:22.055701Z",
+     "iopub.status.idle": "2026-01-22T10:39:22.058529Z",
+     "shell.execute_reply": "2026-01-22T10:39:22.058130Z",
+     "shell.execute_reply.started": "2026-01-22T10:39:22.055992Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "day=datetime.date.fromisoformat(\"2026-01-19\")"
    ]
   },
   {
@@ -24,7 +408,7 @@
     "from lsst_efd_client import EfdClient,resample\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import datetime \n",
+    "\n",
     "import pytz\n",
     "timezone = pytz.utc\n",
     "from math import isnan\n",
@@ -38,11 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialisation from \n",
-    "if last_data_date == 'Now':\n",
-    "    last_data_date_val = datetime.datetime.now(datetime.UTC)\n",
-    "else:\n",
-    "    last_data_date_val = datetime.datetime.fromisoformat(last_data_date+'T14:00:00+00:00')\n",
+    "last_data_date_val = datetime.datetime.fromisoformat(last_data_date.isoformat()+'T14:00:00+00:00')\n",
     "first_data_date_val = last_data_date_val - datetime.timedelta(days=duration_in_day)\n",
     "#\n",
     "tstart=first_data_date_val.isoformat()\n",
