avoid crash if no data

--- a/operations/FES/Monitor_motors.ipynb
+++ b/operations/FES/Monitor_motors.ipynb
@@ -108,6 +108,7 @@
     "async def read_db(query,verbose=False,clean=True) :\n",
     "    if verbose : print(query)\n",
     "    db_in =  await client.influx_client.query(query)\n",
+    "    if len(db_in)==0 : return db_in\n",
     "    for col in db_in.columns :\n",
     "        len_col=len(db_in[db_in[col].notnull()])\n",
     "        if clean :\n",
@@ -177,7 +178,7 @@
     "            cont=controler_motor[(controler_motor['Controller']==controle) & (controler_car['positionSensorType']==520.0) & ( controler_car['profileVelocity'] > 2000 )\t]\n",
     "        else : \n",
     "            cont=controler_motor[(controler_motor['Controller']==controle) ]\n",
-    "        #=== build related time information  \n",
+    "        #=== build related time information\n",
     "        brake=cont['state'].to_numpy()\n",
     "        if len(brake)==0 : continue\n",
     "        index_brakeOff_i=np.argwhere( (brake[0:-1]=='SWITCH_ON_DISABLED') & (brake[1:]!='SWITCH_ON_DISABLED' ))[:,0]\n",
@@ -241,9 +242,15 @@
    "outputs": [],
    "source": [
     "control=['acTruckXminusController','acTruckXplusController','onlineClampXminusController','onlineClampXplusController','onlineClampYminusController','latchXminusController','latchXplusController']\n",
-    "MotorPlot(controler_ac,control,'averageCurrent')\n",
+    "if len(controler_ac) > 0 : \n",
+    "    MotorPlot(controler_ac,control,'averageCurrent')\n",
+    "else : \n",
+    "    print('No Autochanger data for this period')\n",
     "control=['carouselController','clampXminusController','clampXplusController']\n",
-    "MotorPlot(controler_car,control,'averageCurrent')\n",
+    "if len(controler_car) > 0 : \n",
+    "    MotorPlot(controler_car,control,'averageCurrent')\n",
+    "else : \n",
+    "    print('No Carousel data for this period')\n",
     "#MotorPlot(controler_car,control,'current')\n"
    ]
   },
